--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="font-sans bg-gray-100 text-gray-900">
     <header class="bg-red-600 text-white shadow-lg">
         <nav class="container mx-auto px-4 py-3 flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold">Media Sosial Cerdas</a>
+            <a href="#" class="text-2xl font-bold">Literasi Digital</a>
             <ul class="hidden md:flex space-x-4">
                 <li><a href="#praktik-terbaik" class="hover:text-yellow-300">Praktik Terbaik</a></li>
                 <li><a href="#etika-privasi" class="hover:text-yellow-300">Etika Privasi</a></li>
@@ -97,33 +97,33 @@
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold mb-4">1. Kecakapan Digital (Digital Skills)</h3>
                         <p>Kecakapan digital adalah kemampuan menggunakan teknologi dan perangkat digital dengan efisien. Pilar ini mencakup:</p>
-                        <p>• Kemampuan mengoperasikan perangkat seperti komputer, smartphone, dan aplikasi.</p>
-                        <p>• Pemahaman dasar tentang perangkat lunak (software) dan perangkat keras (hardware).</p>
-                        <p>• Kemampuan untuk memecahkan masalah teknis dasar yang mungkin muncul saat menggunakan teknologi.</p>
+                        <p>1. Kemampuan mengoperasikan perangkat seperti komputer, smartphone, dan aplikasi.</p>
+                        <p>2. Pemahaman dasar tentang perangkat lunak (software) dan perangkat keras (hardware).</p>
+                        <p>3. Kemampuan untuk memecahkan masalah teknis dasar yang mungkin muncul saat menggunakan teknologi.</p>
                         <p>Menguasai kecakapan digital memungkinkan seseorang untuk beradaptasi dengan cepat terhadap perubahan teknologi yang terus berkembang.</p>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold mb-4">2. Etika Digital (Digital Ethics)</h3>
                         <p>Etika digital adalah pedoman moral yang mengatur perilaku individu di dunia maya. Pilar ini melibatkan:</p>
-                        <p>• Kesadaran akan hak dan privasi orang lain di internet.</p>
-                        <p>• Menghindari perilaku seperti cyberbullying, penyebaran hoaks, dan plagiarisme.</p>
-                        <p>• Menggunakan teknologi secara bertanggung jawab, seperti menghormati hak cipta dan hak kekayaan intelektual.</p>
+                        <p>1. Kesadaran akan hak dan privasi orang lain di internet.</p>
+                        <p>2. Menghindari perilaku seperti cyberbullying, penyebaran hoaks, dan plagiarisme.</p>
+                        <p>3. Menggunakan teknologi secara bertanggung jawab, seperti menghormati hak cipta dan hak kekayaan intelektual.</p>
                         <p>Dengan etika digital, kita dapat menciptakan lingkungan digital yang aman, nyaman, dan inklusif untuk semua pengguna.</p>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold mb-4">Keamanan Digital (Digital Safety)</h3>
                         <p>Keamanan digital berfokus pada perlindungan data pribadi dan informasi penting dari ancaman di dunia maya. Hal ini mencakup:</p>
-                        <p>• Menggunakan kata sandi yang kuat dan berbeda untuk setiap akun.</p>
-                        <p>• Mengenali ancaman seperti phishing, malware, dan penipuan daring.</p>
-                        <p>• Mengelola data pribadi dengan bijak, seperti tidak membagikan informasi sensitif di media sosial.</p>
+                        <p>1. Menggunakan kata sandi yang kuat dan berbeda untuk setiap akun.</p>
+                        <p>2. Mengenali ancaman seperti phishing, malware, dan penipuan daring.</p>
+                        <p>3. Mengelola data pribadi dengan bijak, seperti tidak membagikan informasi sensitif di media sosial.</p>
                         <p>Memahami keamanan digital membantu individu menjaga diri mereka dari risiko yang dapat merugikan secara finansial maupun emosional.</p>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold mb-4">Budaya Digital (Digital Culture)</h3>
                         <p>Budaya digital adalah pemahaman tentang bagaimana teknologi memengaruhi komunikasi, kolaborasi, dan perilaku sosial. Pilar ini mencakup:</p>
-                        <p>• Menggunakan teknologi untuk kolaborasi yang positif, seperti berbagi informasi bermanfaat dan membangun komunitas daring.</p>
-                        <p>• Mengembangkan sikap kritis terhadap informasi yang ditemukan di internet.</p>
-                        <p>• Menghargai keragaman budaya dalam interaksi digital.</p>
+                        <p>1. Menggunakan teknologi untuk kolaborasi yang positif, seperti berbagi informasi bermanfaat dan membangun komunitas daring.</p>
+                        <p>2. Mengembangkan sikap kritis terhadap informasi yang ditemukan di internet.</p>
+                        <p>3. Menghargai keragaman budaya dalam interaksi digital.</p>
                         <p>Dengan budaya digital yang kuat, masyarakat dapat memanfaatkan teknologi untuk membangun hubungan yang lebih baik dan produktif.</p>
                     </div>
                 </div>
