--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <p>Dengan etika digital, kita dapat menciptakan lingkungan digital yang aman, nyaman, dan inklusif untuk semua pengguna.</p>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4">Keamanan Digital (Digital Safety)</h3>
+                        <h3 class="text-xl font-semibold mb-4">3. Keamanan Digital (Digital Safety)</h3>
                         <p>Keamanan digital berfokus pada perlindungan data pribadi dan informasi penting dari ancaman di dunia maya. Hal ini mencakup:</p>
                         <p>1. Menggunakan kata sandi yang kuat dan berbeda untuk setiap akun.</p>
                         <p>2. Mengenali ancaman seperti phishing, malware, dan penipuan daring.</p>
@@ -119,7 +119,7 @@
                         <p>Memahami keamanan digital membantu individu menjaga diri mereka dari risiko yang dapat merugikan secara finansial maupun emosional.</p>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4">Budaya Digital (Digital Culture)</h3>
+                        <h3 class="text-xl font-semibold mb-4">4. Budaya Digital (Digital Culture)</h3>
                         <p>Budaya digital adalah pemahaman tentang bagaimana teknologi memengaruhi komunikasi, kolaborasi, dan perilaku sosial. Pilar ini mencakup:</p>
                         <p>1. Menggunakan teknologi untuk kolaborasi yang positif, seperti berbagi informasi bermanfaat dan membangun komunitas daring.</p>
                         <p>2. Mengembangkan sikap kritis terhadap informasi yang ditemukan di internet.</p>
