--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <script src="https://jsc.mgid.com/site/908419.js" async> 
+ </script> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pendidikan Media Sosial Indonesia</title>
@@ -37,6 +39,11 @@
                 <a href="#praktik-terbaik" class="bg-yellow-500 text-gray-900 px-6 py-3 rounded-full text-lg font-semibold hover:bg-yellow-400 transition duration-300">Mulai Belajar</a>
             </div>
         </section>
+        <div data-type="_mgwidget" data-widget-id="1530744"> 
+        </div> 
+        <script>(function(w,q){w[q]=w[q]||[];w[q].push(["_mgc.load"])})(window,"_mgq"); 
+        </script> 
+ 
 
         <section id="praktik-terbaik" class="py-16 bg-white">
             <div class="container mx-auto px-4">
@@ -53,6 +60,11 @@
                 </div>
             </div>
         </section>
+        <div data-type="_mgwidget" data-widget-id="1530734"> 
+        </div> 
+        <script>(function(w,q){w[q]=w[q]||[];w[q].push(["_mgc.load"])})(window,"_mgq"); 
+        </script> 
+ 
 
         <section id="etika-privasi" class="py-16 bg-gray-100">
             <div class="container mx-auto px-4">
