--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  </script> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pendidikan Media Sosial Indonesia</title>
+    <title>Literasi Digital dan Pendidikan Media Sosial Indonesia</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -131,7 +131,7 @@
                         <p>Memahami keamanan digital membantu individu menjaga diri mereka dari risiko yang dapat merugikan secara finansial maupun emosional.</p>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4">4. Budaya Digital (Digital Culture)</h3>
+                        <h4 class="text-xl font-semibold mb-4">4. Budaya Digital (Digital Culture)</h4>
                         <p>Budaya digital adalah pemahaman tentang bagaimana teknologi memengaruhi komunikasi, kolaborasi, dan perilaku sosial. Pilar ini mencakup:</p>
                         <p>1. Menggunakan teknologi untuk kolaborasi yang positif, seperti berbagi informasi bermanfaat dan membangun komunitas daring.</p>
                         <p>2. Mengembangkan sikap kritis terhadap informasi yang ditemukan di internet.</p>
@@ -145,13 +145,183 @@
 
     <footer class="bg-indo-red text-indo-white py-8">
         <div class="container mx-auto text-center">
-            <p>&copy; <span id="current-year"></span> Media Sosial Cerdas. All Rights Reserved. Dibuat dengan ❤️ untuk Indonesia</p>
             <div class="mt-4 flex justify-center space-x-4">
                 <a href="https://www.facebook.com/agamriyandana.id" class="text-2xl hover:text-gray-300"><i class="fab fa-facebook"></i></a>
                 <a href="https://x.com/agam_riyandana1/" class="text-2xl hover:text-gray-300"><i class="fab fa-twitter"></i></a>
                 <a href="https://instagram.com/realagam1" class="text-2xl hover:text-gray-300"><i class="fab fa-instagram"></i></a>
                 <a href="#" class="text-2xl hover:text-gray-300"><i class="fab fa-linkedin"></i></a>
             </div>
+            <p>&copy; <span id="current-year"></span> Literasi Digital Dan Media Sosial Cerdas. All Rights Reserved. Dibuat dengan ❤️ untuk Indonesia</p>
+        </div>
+    </footer>
+
+    <script>
+        // Simple toggle for mobile menu
+        const menuButton = document.querySelector('button');
+        const navItems = document.querySelector('nav ul');
+        
+        menuButton.addEventListener('click', () => {
+            navItems.classList.toggle('hidden');
+            navItems.classList.toggle('flex');
+            navItems.classList.toggle('flex-col');
+            navItems.classList.toggle('absolute');
+            navItems.classList.toggle('top-16');
+            navItems.classList.toggle('right-0');
+            navItems.classList.toggle('bg-red-600');
+            navItems.class<!DOCTYPE html>
+<html lang="id">
+<head>
+    <script src="https://jsc.mgid.com/site/908419.js" async> 
+ </script> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Literasi Digital dan Pendidikan Media Sosial Indonesia</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .batik-bg {
+            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><rect width="100" height="100" fill="%23f3f4f6"/><path d="M0 0h100v100H0z" fill="%23ef4444" fill-opacity="0.1"/><circle cx="50" cy="50" r="30" stroke="%23ef4444" stroke-width="2" fill="none"/><circle cx="50" cy="50" r="15" stroke="%23ef4444" stroke-width="2" fill="none"/></svg>');
+        }
+    </style>
+</head>
+<body class="font-sans bg-gray-100 text-gray-900">
+    <header class="bg-red-600 text-white shadow-lg">
+        <nav class="container mx-auto px-4 py-3 flex justify-between items-center">
+            <a href="#" class="text-2xl font-bold">Literasi Digital</a>
+            <ul class="hidden md:flex space-x-4">
+                <li><a href="#praktik-terbaik" class="hover:text-yellow-300">Praktik Terbaik</a></li>
+                <li><a href="#etika-privasi" class="hover:text-yellow-300">Etika Privasi</a></li>
+                <li><a href="#literasi-digital" class="hover:text-yellow-300">Literasi Digital</a></li>
+            </ul>
+            <button class="md:hidden text-white focus:outline-none">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+                </svg>
+            </button>
+        </nav>
+    </header>
+
+    <main>
+        <section class="batik-bg py-20 text-center">
+            <div class="container mx-auto px-4">
+                <h1 class="text-4xl md:text-6xl font-bold mb-4">Selamat Datang di Media Sosial Cerdas</h1>
+                <p class="text-xl mb-8">Pelajari cara menggunakan media sosial dengan aman, etis, dan efektif</p>
+                <a href="#praktik-terbaik" class="bg-yellow-500 text-gray-900 px-6 py-3 rounded-full text-lg font-semibold hover:bg-yellow-400 transition duration-300">Mulai Belajar</a>
+            </div>
+        </section>
+        <div data-type="_mgwidget" data-widget-id="1530744"> 
+        </div> 
+        <script>(function(w,q){w[q]=w[q]||[];w[q].push(["_mgc.load"])})(window,"_mgq"); 
+        </script> 
+ 
+
+        <section id="praktik-terbaik" class="py-16 bg-white">
+            <div class="container mx-auto px-4">
+                <h2 class="text-3xl font-bold mb-8 text-center">Praktik Terbaik Media Sosial</h2>
+                <div class="grid md:grid-cols-2 gap-8">
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">1. Jaga Privasi Anda</h3>
+                        <p>Selalu periksa pengaturan privasi akun Anda dan batasi informasi yang Anda bagikan secara publik. Ingat, sekali sesuatu diunggah ke internet, sulit untuk menghapusnya sepenuhnya.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">2. Berpikir Sebelum Memposting</h3>
+                        <p>Pertimbangkan dampak jangka panjang dari konten yang Anda posting. Apakah itu dapat mempengaruhi reputasi atau peluang Anda di masa depan? Jika ragu, lebih baik tidak memposting.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div data-type="_mgwidget" data-widget-id="1530734"> 
+        </div> 
+        <script>(function(w,q){w[q]=w[q]||[];w[q].push(["_mgc.load"])})(window,"_mgq"); 
+        </script> 
+ 
+
+        <section id="etika-privasi" class="py-16 bg-gray-100">
+            <div class="container mx-auto px-4">
+                <h2 class="text-3xl font-bold mb-8 text-center">Etika Privasi di Media Sosial</h2>
+                <div class="bg-white p-6 rounded-lg shadow-md">
+                    <h3 class="text-xl font-semibold mb-4">Menghormati Privasi Orang Lain</h3>
+                    <p class="mb-4">Sama seperti Anda ingin privasi Anda dihormati, penting untuk menghormati privasi orang lain di media sosial. Berikut beberapa panduan etis:</p>
+                    <ul class="list-disc pl-6 mb-4">
+                        <li>Jangan membagikan informasi pribadi atau foto orang lain tanpa izin mereka.</li>
+                        <li>Hormati batas-batas yang ditetapkan oleh teman dan koneksi Anda di media sosial.</li>
+                        <li>Jangan menggunakan informasi pribadi orang lain untuk keuntungan pribadi atau untuk merugikan mereka.</li>
+                    </ul>
+                    <p>Ingat, etika privasi bukan hanya tentang aturan, tetapi juga tentang membangun kepercayaan dan rasa hormat dalam komunitas online.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="literasi-digital" class="py-16 bg-white">
+            <div class="container mx-auto px-4">
+                <h2 class="text-3xl font-bold mb-8 text-center">Literasi Digital</h2>
+                <div class="grid md:grid-cols-3 gap-8">
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">Mengenali Informasi Palsu</h3>
+                        <p>Belajar cara mengidentifikasi dan memverifikasi sumber informasi. Jangan mudah percaya atau membagikan berita tanpa memeriksa kebenarannya terlebih dahulu.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">Keamanan Online</h3>
+                        <p>Pahami pentingnya kata sandi yang kuat, autentikasi dua faktor, dan cara melindungi diri dari penipuan online dan serangan phishing.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">Manajemen Jejak Digital</h3>
+                        <p>Ketahui bagaimana aktivitas online Anda membentuk jejak digital dan cara mengelolanya secara efektif untuk melindungi reputasi online Anda.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="literasi-digital" class="py-16 bg-white">
+            <div class="container mx-auto px-4">
+                <h2 class="text-3xl font-bold mb-8 text-center">4 Pilar Literasi Digital: Fondasi dalam Era Digital</h2>
+                <div class="grid md:grid-cols-3 gap-8">
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">1. Kecakapan Digital (Digital Skills)</h3>
+                        <p>Kecakapan digital adalah kemampuan menggunakan teknologi dan perangkat digital dengan efisien. Pilar ini mencakup:</p>
+                        <p>1. Kemampuan mengoperasikan perangkat seperti komputer, smartphone, dan aplikasi.</p>
+                        <p>2. Pemahaman dasar tentang perangkat lunak (software) dan perangkat keras (hardware).</p>
+                        <p>3. Kemampuan untuk memecahkan masalah teknis dasar yang mungkin muncul saat menggunakan teknologi.</p>
+                        <p>Menguasai kecakapan digital memungkinkan seseorang untuk beradaptasi dengan cepat terhadap perubahan teknologi yang terus berkembang.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">2. Etika Digital (Digital Ethics)</h3>
+                        <p>Etika digital adalah pedoman moral yang mengatur perilaku individu di dunia maya. Pilar ini melibatkan:</p>
+                        <p>1. Kesadaran akan hak dan privasi orang lain di internet.</p>
+                        <p>2. Menghindari perilaku seperti cyberbullying, penyebaran hoaks, dan plagiarisme.</p>
+                        <p>3. Menggunakan teknologi secara bertanggung jawab, seperti menghormati hak cipta dan hak kekayaan intelektual.</p>
+                        <p>Dengan etika digital, kita dapat menciptakan lingkungan digital yang aman, nyaman, dan inklusif untuk semua pengguna.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <h3 class="text-xl font-semibold mb-4">3. Keamanan Digital (Digital Safety)</h3>
+                        <p>Keamanan digital berfokus pada perlindungan data pribadi dan informasi penting dari ancaman di dunia maya. Hal ini mencakup:</p>
+                        <p>1. Menggunakan kata sandi yang kuat dan berbeda untuk setiap akun.</p>
+                        <p>2. Mengenali ancaman seperti phishing, malware, dan penipuan daring.</p>
+                        <p>3. Mengelola data pribadi dengan bijak, seperti tidak membagikan informasi sensitif di media sosial.</p>
+                        <p>Memahami keamanan digital membantu individu menjaga diri mereka dari risiko yang dapat merugikan secara finansial maupun emosional.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md">
+                        <h4 class="text-xl font-semibold mb-4">4. Budaya Digital (Digital Culture)</h4>
+                        <p>Budaya digital adalah pemahaman tentang bagaimana teknologi memengaruhi komunikasi, kolaborasi, dan perilaku sosial. Pilar ini mencakup:</p>
+                        <p>1. Menggunakan teknologi untuk kolaborasi yang positif, seperti berbagi informasi bermanfaat dan membangun komunitas daring.</p>
+                        <p>2. Mengembangkan sikap kritis terhadap informasi yang ditemukan di internet.</p>
+                        <p>3. Menghargai keragaman budaya dalam interaksi digital.</p>
+                        <p>Dengan budaya digital yang kuat, masyarakat dapat memanfaatkan teknologi untuk membangun hubungan yang lebih baik dan produktif.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="bg-indo-red text-indo-white py-8">
+        <div class="container mx-auto text-center">
+            <div class="mt-4 flex justify-center space-x-4">
+                <a href="https://www.facebook.com/agamriyandana.id" class="text-2xl hover:text-gray-300"><i class="fab fa-facebook"></i></a>
+                <a href="https://x.com/agam_riyandana1/" class="text-2xl hover:text-gray-300"><i class="fab fa-twitter"></i></a>
+                <a href="https://instagram.com/realagam1" class="text-2xl hover:text-gray-300"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-2xl hover:text-gray-300"><i class="fab fa-linkedin"></i></a>
+            </div>
+            <p>&copy; <span id="current-year"></span> Literasi Digital Dan Media Sosial Cerdas. All Rights Reserved. Dibuat dengan ❤️ untuk Indonesia</p>
         </div>
     </footer>
 
@@ -169,6 +339,15 @@
             navItems.classList.toggle('right-0');
             navItems.classList.toggle('bg-red-600');
             navItems.classList.toggle('w-full');
+            navItems.classList.toggle('text-center');
+        });
+    </script>
+    <script>
+        document.getElementById('current-year').textContent = new Date().getFullYear();
+    </script>
+</body>
+</html>
+List.toggle('w-full');
             navItems.classList.toggle('text-center');
         });
     </script>
