--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <li>Phishing: Upaya untuk mendapatkan informasi sensitif seperti kata sandi dan detail kartu kredit dengan berpura-pura sebagai entitas terpercaya.</li>
                         <li>Malware: Perangkat lunak berbahaya yang dirancang untuk merusak atau mengakses sistem komputer tanpa izin.</li>
                         <li>Peretasan (Hacking): Akses tidak sah ke sistem komputer atau jaringan untuk mencuri data atau merusak sistem.</li>
-                        <li>Penipuan online: Berbagai bentuk penipuan yang dilakukan melalui internet, termasuk penipuan investasi dan romance scam.</li>
+                        <li>Penipuan online: Berbagai bentuk penipuan yang dilakukan melalui internet, termasuk penipuan investasi dan ransomware scam.</li>
                         <li>Cyberbullying: Pelecehan atau intimidasi yang dilakukan melalui media digital.</li>
                     </ul>
                     <p>Penting bagi pengguna internet untuk selalu waspada dan menerapkan praktik keamanan siber yang baik untuk melindungi diri dari ancaman cyber crimes.</p>
